tests/baselines/reference/functionAndPropertyNameConflict.errors.txt
tests/cases/compiler/functionAndPropertyNameConflict.ts(2,12): error TS2300: Duplicate identifier 'aaaaa'.
tests/cases/compiler/functionAndPropertyNameConflict.ts(3,16): error TS2300: Duplicate identifier 'aaaaa'.


==== tests/cases/compiler/functionAndPropertyNameConflict.ts (2 errors) ====
    class C65 {
        public aaaaa() { }
               ~~~~~
!!! error TS2300: Duplicate identifier 'aaaaa'.
        public get aaaaa() {
                   ~~~~~
!!! error TS2300: Duplicate identifier 'aaaaa'.
            return 1;
        }
    }